--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
 body, html{
     height: 100%;
 }
+
+body{
+    scroll-behavior:smooth;
+}
+
+p{
+    font-family: Arial, Helvetica, sans-serif
+}
+
+.head-intro{
+    margin-bottom: 50px;
+    padding: 65px 50px;
+    text-align: center;
+    background-image: url(https://cdn.pixabay.com/photo/2015/07/28/13/21/cd-864402_1280.jpg);
+    color: white;
+    max-width: 100%;
+    height: auto;
+   
+    
+}
+
+.Introduction{
+    border-bottom: 3px solid black;
+    position: absolute;
+    font-size: 48px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.when{
+    font-size: 18px;
+    margin: 24px;
+    padding-top: 100px;
+}
+
+.features{
+    list-style-type: disc;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.infographic{
+    height: 100%;
+    float: right;
+}
