--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body, html{
     height: 100%;
+    
 }
 
 body{
@@ -15,7 +16,7 @@ p{
     padding: 65px 50px;
     text-align: center;
     background-image: url(https://cdn.pixabay.com/photo/2015/07/28/13/21/cd-864402_1280.jpg);
-    color: white;
+    color: #DCAE96;
     max-width: 100%;
     height: auto;
    
@@ -28,24 +29,41 @@ p{
     font-size: 48px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+
 }
 
-.when{
+.subtext{
+    padding-top: 80px;
+}
+
+.info{
     font-size: 18px;
-    margin: 24spx;
-    padding-top: 100px;
-    color: #6eb5ff;
+    margin: 10px;
+    padding-top: 10px;
+    color: #DCAE96;
+    padding: -100px;
 }
 
 .features{
     list-style-type: disc;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
-.infographic{
-    height: 100%;
+.russ{
+    max-height: 500px;
+    max-width: 500px;   
+}
+
+.row{
     float: right;
 }
 
+.caption{
+    font-size: 20px;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: block;
+}
 
