--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body, html{
     height: 100%;
+    background-color: #966F49;
     
 }
 
@@ -51,9 +52,12 @@ p{
     font-weight: bold;
 }
 
-.russ{
+.side-image{
     max-height: 500px;
     max-width: 500px;   
+    position: relative;
+    left: 150px;
+    bottom: 80px;
 }
 
 .row{
@@ -61,9 +65,21 @@ p{
 }
 
 .caption{
-    font-size: 20px;
+    font-size: 18px;
     padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
     display: block;
+    position: relative;
+    left: 220px;
+    bottom: 90px;
+    font-style:italic;
 }
 
+.info2{
+    padding-top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #DCAE96;
+    font-size: 21px;
+    margin: 10px;
+   
+}
