--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body, html{
     height: 100%;
-    background-color: #966F49;
+    background-color: #9799BA;
     
 }
 
@@ -9,39 +9,38 @@ body{
 }
 
 p{
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Helvetica, Sans-serif, Arial;
 }
+
+div{
+    display: block;
+}
+
 
 .head-intro{
     margin-bottom: 50px;
     padding: 65px 50px;
     text-align: center;
     background-image: url(https://cdn.pixabay.com/photo/2015/07/28/13/21/cd-864402_1280.jpg);
-    color: #DCAE96;
+    color: #9799BA;
     max-width: 100%;
     height: auto;
    
     
 }
 
-.Introduction{
-    border-bottom: 3px solid black;
-    position: absolute;
-    font-size: 48px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-
+.header{
+    text-decoration-line: underline;
 }
 
-.subtext{
-    padding-top: 80px;
-}
+
+
 
 .info{
     font-size: 18px;
     margin: 10px;
     padding-top: 10px;
-    color: #DCAE96;
+    color: #FEADA9;
     padding: -100px;
 }
 
@@ -50,36 +49,67 @@ p{
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    padding-left: 2em;
 }
 
-.side-image{
-    max-height: 500px;
-    max-width: 500px;   
-    position: relative;
-    left: 150px;
-    bottom: 80px;
+.russ{
+    max-height: 600px;
+    max-width: 800px; 
+    
 }
 
-.row{
+.col-1-3{
     float: right;
 }
 
 .caption{
     font-size: 18px;
-    padding: 20px;
+    padding-left: 130px;
     font-family: Arial, Helvetica, sans-serif;
     display: block;
-    position: relative;
-    left: 220px;
-    bottom: 90px;
     font-style:italic;
 }
+
+.infograph{
+    max-height: 1000px;
+    max-width: 300px;
+}
+
+.comp{
+    color: #FEADA9;
+}
+.header2{
+    text-decoration-line: underline;
+    text-decoration-color: white;
+    color: #FEADA9;
+}
+/*
 
 .info2{
     padding-top: 100px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #DCAE96;
+    color: #FEADA9;
     font-size: 21px;
     margin: 10px;
    
+}
+
+.cd-graph{
+    max-height: 500px;
+    max-width: 500px;   
+    padding-top: 20px;
+    position: relative;
+    bottom: 30px;
+    left: 500px;
+    
+}
+
+.caption2{
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    font-style: italic;
+    position: relative;
+    font-size: 18px;
+    left: 450px;
+    bottom: 40px;
 }
