--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
 }
 
 p{
-    font-family: Helvetica, Sans-serif, Arial;
+    font-family: 'Spline Sans', sans-serif;
+    font-size: 22px;
 }
 
 div{
@@ -33,21 +34,10 @@ div{
     text-decoration-line: underline;
 }
 
-
-
-
-.info{
-    font-size: 18px;
-    margin: 10px;
-    padding-top: 10px;
-    color: #FEADA9;
-    padding: -100px;
-}
-
 .features{
     list-style-type: disc;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Spline Sans', sans-serif;
     font-weight: bold;
     padding-left: 2em;
 }
@@ -58,58 +48,40 @@ div{
     
 }
 
-.col-1-3{
-    float: right;
-}
-
 .caption{
     font-size: 18px;
-    padding-left: 130px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Spline Sans', sans-serif;
     display: block;
     font-style:italic;
 }
 
 .infograph{
-    max-height: 1000px;
-    max-width: 300px;
+    max-height: 800px;
+    max-width: 400px;
 }
 
 .comp{
     color: #FEADA9;
+    font-family: 'Spline Sans', sans-serif;
+    text-align: center;
 }
 .header2{
     text-decoration-line: underline;
     text-decoration-color: white;
     color: #FEADA9;
+    font-family: 'Spline Sans', sans-serif;
+    text-align: center;
 }
-/*
 
-.info2{
-    padding-top: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #FEADA9;
-    font-size: 21px;
+.info{
+    font-size: 22px;
     margin: 10px;
-   
+    padding-top: 10px;
+    color: #FEADA9;
 }
 
 .cd-graph{
-    max-height: 500px;
-    max-width: 500px;   
-    padding-top: 20px;
-    position: relative;
-    bottom: 30px;
-    left: 500px;
-    
-}
-
-.caption2{
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 20px;
-    font-style: italic;
-    position: relative;
-    font-size: 18px;
-    left: 450px;
-    bottom: 40px;
+    max-height: 600px;
+    max-width: 600px;
+    padding-bottom: 20px;
 }
